# LSUCIS

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attacker/: __init__.py  rogue_transmitter.py
ccsds/: __init__.py  packet_builder.py  packet_parser.py
cli/: __init__.py  satcli.py
crypto/: __init__.py  constants.py  hmac_signer.py  verifier.py
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md
examples/: sample_attack_packet.json  sample_legit_packet.json
ground/: __init__.py  ground_station.py
satellite/: __init__.py  firewall.py  satellite_bus.py  telemetry.py
tests/: test_ccsds.py  test_hmac.py  test_secrets.py
utils/: __init__.py  secrets.py
