[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py312"]
line-length = 100
extend-exclude = "examples/|docs/"

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["examples", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "W", "B", "UP", "S", "A"]
ignore = ["D203", "D212", "D400"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

